Add uml, table, youtube exts

--- a/modules/editor/styles/tui.editor_default/style.ini
+++ b/modules/editor/styles/tui.editor_default/style.ini
@@ -9,9 +9,13 @@
 
 ../../skins/TOAST_UI_Editor/bower_components/raphael/raphael.min.js
 ../../skins/TOAST_UI_Editor/bower_components/tui-chart/dist/tui-chart.js
+../../skins/TOAST_UI_Editor/bower_components/plantuml-encoder/dist/plantuml-encoder.min.js
 
 ../../skins/TOAST_UI_Editor/bower_components/tui-editor/dist/tui-editor-Editor.js
 ../../skins/TOAST_UI_Editor/bower_components/tui-editor/dist/tui-editor-extChart.js
+../../skins/TOAST_UI_Editor/bower_components/tui-editor/dist/tui-editor-extUML.js
+../../skins/TOAST_UI_Editor/bower_components/tui-editor/dist/tui-editor-extTable.js
+../../skins/TOAST_UI_Editor/bower_components/tui-editor/dist/tui-editor-extYoutube.js
 
 
 ../../skins/TOAST_UI_Editor/bower_components/codemirror/lib/codemirror.css
