--- a/modules/editor/styles/tui.editor_default/style.ini
+++ b/modules/editor/styles/tui.editor_default/style.ini
@@ -11,6 +11,7 @@
 ../../skins/TOAST%20UI%20Editor/bower_components/tui-editor/dist/tui-editor-extChart.min.js
 ../../skins/TOAST%20UI%20Editor/bower_components/tui-editor/dist/tui-editor-extUML.min.js
 ../../skins/TOAST%20UI%20Editor/bower_components/tui-editor/dist/tui-editor-extTable.min.js
+../../skins/TOAST%20UI%20Editor/bower_components/tui-editor/dist/tui-editor-extComponent.js
 ../../skins/TOAST%20UI%20Editor/bower_components/tui-editor/dist/tui-editor-extYoutube.js
 ../../skins/TOAST%20UI%20Editor/bower_components/codemirror/lib/codemirror.css
 ../../skins/TOAST%20UI%20Editor/bower_components/highlightjs/styles/github.css
