--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "wiki"]
 	path = wiki
 	url = https://github.com/LIFOsitory/xe-LIFO-wiki.git
+[submodule "modules/wiki"]
+	path = modules/wiki
+	url = https://github.com/LIFOsitory/xe-LIFO-wiki.git
